# genbox

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
genbox/: main.py
genbox/core/: config.py  security.py
genbox/models/: monitor_log.py  schemas.py
genbox/services/: genai_service.py  monitoring_service.py  scheduler_service.py
tests/: test_main.py
tests/integration/: test_endpoints.py  test_scheduling.py
