[tool.poetry]
name = "genbox"
version = "0.1.0"
description = "A unified GenAI API wrapper with scheduling, monitoring, and caching."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
google-generativeai = "^0.3.2"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
pandas = "^2.2.0"
python-multipart = "^0.0.9"
jsonschema = "^4.21.1"
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.27"
tenacity = "^8.2.3"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-recording = "^0.13.1"
vcrpy = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
